test/good/lambdas/partial01.px

func call(f: Bool->String->Void): Void def
    f(true, "$")

func f(a: Int, b: Bool, c: Char, d: String = "---"): Void def
    print a, b, c, d

call(lambda b, d: f(6, b, 'a'))
call(f@(42, _, d=_, c='x'))
