test/bad/functions/lambda11.px

func f(Bool->Void g) def
    return

f(_)
